Add torrent client support with resources, PVC, DHT node config
- Update CRD with pvcName and dhtNode fields
- Update pod spec to run actual torrent client (ghcr.io/torrentdam/cmd:latest)
- Add resource limits (500m CPU, 1Gi memory)
- Add PVC example for local k8s
- Add GitHub Actions workflow for Docker builds
- Add Dockerfile for operator containerization